--- a/CucumberProjects/pom.xml
+++ b/CucumberProjects/pom.xml
@@ -9,6 +9,7 @@
   </properties>
   
    <dependencies>
+   
   <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
 <dependency>
     <groupId>io.cucumber</groupId>
@@ -31,4 +32,34 @@
   	</dependency>
 
 </dependencies>
+<build>
+     <plugins>
+         <!-- Compiler plug-in -->
+              <plugin>
+                   <groupId>org.apache.maven.plugins</groupId>
+                   <artifactId>maven-compiler-plugin</artifactId>
+                   <configuration>
+                         <source>1.8</source>
+                         <target>1.8</target>
+                   </configuration>
+              </plugin>
+
+           <!-- Below plug-in is used to execute tests -->
+
+           <plugin>
+
+               <groupId>org.apache.maven.plugins</groupId>
+
+               <artifactId>maven-surefire-plugin</artifactId>
+
+               <version>2.18.1</version>
+
+           </plugin>
+
+       </plugins>
+
+</build>
+
+
+
 </project>
